[workspace]
members = [
    "packages/*",
    "contracts/*",
    "tests/polytone-tester"
]

[workspace.package]
edition = "2021"
license = "BSD-3"
rust-version = "1.67"
version = "0.1.0"

[profile.release]
codegen-units = 1
debug = false
debug-assertions = false
incremental = false
lto = true
opt-level = 3
overflow-checks = true # very important, do not turn these off.
panic = 'abort'
rpath = false

[workspace.dependencies]
polytone = { path = "packages/polytone" }
polytone-proxy = { path = "contracts/proxy" }
polytone-note = { path = "contracts/note" }
polytone-voice = { path = "contracts/voice" }

cosmwasm-schema = "1.2.1"
cosmwasm-std = { version = "1.2.1", features = ["ibc3", "cosmwasm_1_2"] }
cw-storage-plus = "1.0.1"
cw-utils = "1.0.1"
cw2 = "1.0.1"
serde = { version = "1.0.145", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.31" }

# dev-dependencies
cw-multi-test = "0.16.2"
polytone-tester = { path = "tests/polytone-tester" }
