[workspace]
members = [
  "packages/*",
  "contracts/*",
]

[workspace.package]
edition      = "2021"
license      = "BSD-3"
rust-version = "1.67"
version      = "0.1.0"

[profile.release]
codegen-units    = 1
debug            = false
debug-assertions = false
incremental      = false
lto              = true
opt-level        = 3
overflow-checks  = true    # very important, do not turn these off.
panic            = 'abort'
rpath            = false

[workspace.dependencies]
polytone       = { path = "packages/polytone" }
polytone-proxy = { path = "contracts/proxy" }
polytone-note  = { path = "contracts/note" }
polytone-voice = { path = "contracts/voice" }

cosmwasm-schema = "1.2.1"
cosmwasm-std    = { version = "1.2.4", features = ["ibc3"] }
cw-storage-plus = "1.0.1"
cw-utils        = "1.0.1"
cw2             = "1.0.1"

serde     = { version = "1.0.145", default-features = false, features = ["derive"] }
thiserror = "1.0.31"
# the sha2 version here is the same as the one used by
# cosmwasm-std. when bumping cosmwasm-std, this should also be
# updated. to find cosmwasm_std's sha function:
# ```cargo tree --package cosmwasm-std```
sha2 = "0.10.6"

# dev-dependencies
cw-multi-test   = "0.16.2"
polytone-tester = { path = "tests/polytone-tester" }
anyhow          = { version = "1.0.51" }
